# trading-platform-research

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: BACKTEST_GUIDE.md  DATA_SPEC.md  DESIGN_SYSTEM.md  DETAILED_SPEC.md  STRATEGY_GUIDE.md
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py
src/data/: __init__.py  fetcher.py
src/strategies/: __init__.py  base.py
src/strategies/kimp/: __init__.py  cash_carry.py
src/utils/: __init__.py  logger.py
strategies/kimchi_premium/: PARAMETERS.md  README.md  RISK_MANAGEMENT.md  STRATEGY_OVERVIEW.md  STRATEGY_SPEC.md
tests/: __init__.py  test_strategies.py
