[project]
name = "trading-platform-research"
version = "0.1.0"
description = "전략 연구 & 백테스트 환경"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "vsun410"}
]

dependencies = [
    # 데이터 처리
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.20.0",
    
    # 백테스트
    "vectorbt>=0.26.0",
    
    # 거래소 API
    "python-binance>=1.0.19",
    "pyupbit>=0.2.33",
    
    # DB
    "supabase>=2.0.0",
    "sqlalchemy>=2.0.0",
    
    # 시각화
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    
    # 유틸리티
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    
    # 노트북
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
